# qskinny

examples/: CMakeLists.txt
examples/gallery/dialog/: DialogPage.cpp
examples/svgqvgruggededges/: 01.13.05h.qvg  CMakeLists.txt  images.qrc  main.cpp
playground/: CMakeLists.txt
playground/blurring/: CMakeLists.txt  main.cpp
src/dialogs/: QskDialog.cpp  QskDialog.h  QskSelectionSubWindow.cpp  QskSelectionSubWindow.h  QskSelectionWindow.cpp  QskSelectionWindow.h
tools/: CMakeLists.txt
tools/qsb2hpp/: CMakeLists.txt  main.cpp
